// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExchangeTransactionsRow should render (Expired) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY"
          >
            <button
              class="link"
              type="button"
            >
              <div
                class="sc-bdvvtL fCrhkg"
                height="16"
                width="16"
              >
                <svg>
                  magnifying-glass-id.svg
                </svg>
              </div>
            </button>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq font-semibold"
          />
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
          >
            01.01.2021 12:00 AM
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-3"
          >
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-theme-danger-100 text-theme-danger-400 dark:border-theme-danger-400 ring-theme-background"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
            <div
              class="Label-sc-4akkzw-0 iXzgUi"
              color="danger"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-3"
          >
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-theme-success-200 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  received.svg
                </svg>
              </div>
            </div>
            <div
              class="Label-sc-4akkzw-0 hhvRsd"
              color="success"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center"
          >
            <span>
              <div
                class="sc-bdvvtL qGXhc text-theme-danger-400"
                height="20"
                width="20"
              >
                <svg>
                  clock-error.svg
                </svg>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end text-theme-secondary-text"
          >
            <button
              class="OriginalButton__StyledButton-sc-o0fs2j-0 fxPCrX"
              data-testid="TableRemoveButton"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdvvtL qGXhc"
                  height="20"
                  width="20"
                >
                  <svg>
                    trash.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRow should render (Failed) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY"
          >
            <button
              class="link"
              type="button"
            >
              <div
                class="sc-bdvvtL fCrhkg"
                height="16"
                width="16"
              >
                <svg>
                  magnifying-glass-id.svg
                </svg>
              </div>
            </button>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq font-semibold"
          />
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
          >
            01.01.2021 12:00 AM
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-3"
          >
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-theme-danger-100 text-theme-danger-400 dark:border-theme-danger-400 ring-theme-background"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
            <div
              class="Label-sc-4akkzw-0 iXzgUi"
              color="danger"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-3"
          >
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-theme-success-200 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  received.svg
                </svg>
              </div>
            </div>
            <div
              class="Label-sc-4akkzw-0 hhvRsd"
              color="success"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center"
          >
            <span>
              <div
                class="sc-bdvvtL qGXhc text-theme-danger-400"
                height="20"
                width="20"
              >
                <svg>
                  circle-cross.svg
                </svg>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end text-theme-secondary-text"
          >
            <button
              class="OriginalButton__StyledButton-sc-o0fs2j-0 fxPCrX"
              data-testid="TableRemoveButton"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdvvtL qGXhc"
                  height="20"
                  width="20"
                >
                  <svg>
                    trash.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRow should render (Finished) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY"
          >
            <button
              class="link"
              type="button"
            >
              <div
                class="sc-bdvvtL fCrhkg"
                height="16"
                width="16"
              >
                <svg>
                  magnifying-glass-id.svg
                </svg>
              </div>
            </button>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq font-semibold"
          />
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
          >
            01.01.2021 12:00 AM
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-3"
          >
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-theme-danger-100 text-theme-danger-400 dark:border-theme-danger-400 ring-theme-background"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
            <div
              class="Label-sc-4akkzw-0 iXzgUi"
              color="danger"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-3"
          >
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-theme-success-200 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  received.svg
                </svg>
              </div>
            </div>
            <div
              class="Label-sc-4akkzw-0 hhvRsd"
              color="success"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center"
          >
            <span>
              <div
                class="sc-bdvvtL qGXhc text-theme-success-600"
                height="20"
                width="20"
              >
                <svg>
                  circle-check-mark.svg
                </svg>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end text-theme-secondary-text"
          >
            <button
              class="OriginalButton__StyledButton-sc-o0fs2j-0 fxPCrX"
              data-testid="TableRemoveButton"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdvvtL qGXhc"
                  height="20"
                  width="20"
                >
                  <svg>
                    trash.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRow should render (New) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY"
          >
            <button
              class="link"
              type="button"
            >
              <div
                class="sc-bdvvtL fCrhkg"
                height="16"
                width="16"
              >
                <svg>
                  magnifying-glass-id.svg
                </svg>
              </div>
            </button>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq font-semibold"
          />
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
          >
            01.01.2021 12:00 AM
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-3"
          >
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-theme-danger-100 text-theme-danger-400 dark:border-theme-danger-400 ring-theme-background"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
            <div
              class="Label-sc-4akkzw-0 iXzgUi"
              color="danger"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-3"
          >
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-theme-success-200 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  received.svg
                </svg>
              </div>
            </div>
            <div
              class="Label-sc-4akkzw-0 hhvRsd"
              color="success"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <div
                  class="flex items-center justify-center bg-theme-success-200 dark:bg-theme-success-600 -ml-1.5 px-2"
                  data-testid="AmountLabel__hint"
                >
                  <div
                    class="sc-bdvvtL Cfvxc dark:text-white"
                    height="10"
                    width="10"
                  >
                    <svg>
                      hint-small.svg
                    </svg>
                  </div>
                </div>
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center"
          >
            <span>
              <div
                class="sc-bdvvtL qGXhc text-theme-secondary-500 dark:text-theme-secondary-700"
                height="20"
                width="20"
              >
                <svg>
                  clock.svg
                </svg>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end text-theme-secondary-text"
          >
            <button
              class="OriginalButton__StyledButton-sc-o0fs2j-0 fxPCrX"
              data-testid="TableRemoveButton"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdvvtL qGXhc"
                  height="20"
                  width="20"
                >
                  <svg>
                    trash.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRow should render (Refunded) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY"
          >
            <button
              class="link"
              type="button"
            >
              <div
                class="sc-bdvvtL fCrhkg"
                height="16"
                width="16"
              >
                <svg>
                  magnifying-glass-id.svg
                </svg>
              </div>
            </button>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq font-semibold"
          />
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
          >
            01.01.2021 12:00 AM
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-3"
          >
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-theme-danger-100 text-theme-danger-400 dark:border-theme-danger-400 ring-theme-background"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
            <div
              class="Label-sc-4akkzw-0 iXzgUi"
              color="danger"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-3"
          >
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-theme-success-200 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  received.svg
                </svg>
              </div>
            </div>
            <div
              class="Label-sc-4akkzw-0 hhvRsd"
              color="success"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center"
          >
            <span>
              <div
                class="sc-bdvvtL qGXhc text-theme-warning-300"
                height="20"
                width="20"
              >
                <svg>
                  circle-exclamation-mark.svg
                </svg>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end text-theme-secondary-text"
          >
            <button
              class="OriginalButton__StyledButton-sc-o0fs2j-0 fxPCrX"
              data-testid="TableRemoveButton"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdvvtL qGXhc"
                  height="20"
                  width="20"
                >
                  <svg>
                    trash.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRow should render (Verifying) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY"
          >
            <button
              class="link"
              type="button"
            >
              <div
                class="sc-bdvvtL fCrhkg"
                height="16"
                width="16"
              >
                <svg>
                  magnifying-glass-id.svg
                </svg>
              </div>
            </button>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq font-semibold"
          />
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
          >
            01.01.2021 12:00 AM
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-3"
          >
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-theme-danger-100 text-theme-danger-400 dark:border-theme-danger-400 ring-theme-background"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
            <div
              class="Label-sc-4akkzw-0 iXzgUi"
              color="danger"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-3"
          >
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-theme-success-200 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  received.svg
                </svg>
              </div>
            </div>
            <div
              class="Label-sc-4akkzw-0 hhvRsd"
              color="success"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center"
          >
            <span>
              <div
                class="sc-bdvvtL qGXhc text-theme-warning-300"
                height="20"
                width="20"
              >
                <svg>
                  circle-exclamation-mark.svg
                </svg>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end text-theme-secondary-text"
          >
            <button
              class="OriginalButton__StyledButton-sc-o0fs2j-0 fxPCrX"
              data-testid="TableRemoveButton"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdvvtL qGXhc"
                  height="20"
                  width="20"
                >
                  <svg>
                    trash.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRow should render compact 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 UdZIx"
          >
            <button
              class="link"
              type="button"
            >
              <div
                class="sc-bdvvtL fCrhkg"
                height="16"
                width="16"
              >
                <svg>
                  magnifying-glass-id.svg
                </svg>
              </div>
            </button>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD font-semibold"
          />
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD"
          >
            01.01.2021 12:00 AM
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD space-x-3"
          >
            <span
              class="w-5 h-5 flex items-center border-theme-danger-100 text-theme-danger-400 dark:border-theme-danger-400"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </span>
            <div
              class="Label-sc-4akkzw-0 fhDzha"
              color="danger"
            >
              <div
                class="flex space-x-1 items-center"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD space-x-3"
          >
            <span
              class="w-5 h-5 flex items-center border-theme-success-200 text-theme-success-600 dark:border-theme-success-600"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  received.svg
                </svg>
              </div>
            </span>
            <div
              class="Label-sc-4akkzw-0 bxfWpB"
              color="success"
            >
              <div
                class="flex space-x-1 items-center"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD justify-center"
          >
            <span>
              <div
                class="sc-bdvvtL qGXhc text-theme-danger-400"
                height="20"
                width="20"
              >
                <svg>
                  circle-cross.svg
                </svg>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 dMbCwx justify-end text-theme-secondary-text"
          >
            <button
              class="OriginalButton__StyledButton-sc-o0fs2j-0 enzTPF text-theme-danger-400 hover:text-theme-danger-500"
              data-testid="TableRemoveButton"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    trash.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
